--- a/front/src/styles/LocationPage.css
+++ b/front/src/styles/LocationPage.css
@@ -9,19 +9,19 @@
 }
 
 .location-button {
-  background-color: #4CAF50;
+  background-color: #0685cf;
   border: none;
   color: white;
-  padding: 15px 32px;
+  padding: 12px 12px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 12px;
+  font-size: 16px;
   margin: 4px 2px;
   cursor: pointer;
   transition: background-color 0.3s;
 }
 
 .location-button:hover {
-  background-color: #45a049;
+  background-color: #69aed6;
 }
