--- a/front/src/styles/Search.css
+++ b/front/src/styles/Search.css
@@ -1,36 +1,116 @@
-form {
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+}
+
+.my-page {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  gap: 50px;
+  padding-top: 80px;
+
+  width: 100%;
+  height: 100vh;
+}
+
+.my-page .myPageTitle {
+  font-weight: 300;
+  font-size: 40px;
+  text-align: center;
+  margin-bottom: 30px;
+  margin-top: 80px;
+}
+
+.bottom-section {
+  display: flex;
+  justify-content: center;
+  gap: 36px;
+}
+
+.my-favorite,
+.challenge-status {
+  background-color: #fafafa;
+  padding: 80px 100px;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+.my-favorite {
+  max-width: 560px;
+}
+
+.favorite-card {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 15px 10px 20px;
+  margin-bottom: 10px;
+  border-radius: 50px;
+  background-color: #d6f0ff;
+}
+
+.delete-button {
+  background: none;
+  color: black;
+  border: none;
+  cursor: pointer;
+  font-size: 20px;
+  margin-left: 10px;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+}
+
+.delete-button:hover {
+  color: #c00;
+}
+
+.challenges-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 20px;
+}
+
+.challenge-card {
+  margin-bottom: 30px;
+  background-color: #fff;
+  padding: 40px;
+  border-radius: 10px;
+  max-width: 240px;
+}
+
+.my-favorite h2 {
+  font-size: 36px;
+  text-align: center;
+  font-weight: 300;
+}
+
+.my-favorite h3 {
+  font-weight: 300;
+  font-size: 32px;
+  text-align: center;
   margin-bottom: 30px;
 }
 
-.search-field {
-  width: 77%;
-  padding: 10px;
-  height: 45px;
-  border-radius: 4px;
-  border: 1px solid lightgrey;
-  margin-right: 8px;
-  font-size: 16px;
+.my-favorite h4 {
+  font-weight: 300;
+  font-size: 24px;
+  text-align: center;
+  margin-bottom: 10px;
 }
 
-.search-button {
-  min-width: 80px;
-  height: 45px;
-  width: 15%;
-  padding: 10px;
-  color: white;
-  background-color: #004aad;
-  border: 1px solid #004aad;
-  border-radius: 4px;
-  font-size: 16px;
+.my-favorite p {
+  text-align: center;
 }
 
-.search_result {
-  background: white;
-  width: 400px;
-  margin-top: 10px;
-  position: absolute;
-}
-
-.search_result::-webkit-scrollbar {
-  display: none;
+.addFavorite {
+  text-decoration: underline;
+  color: #00a3ff;
+  line-height: 2.5;
+  display: block;
+  text-align: center;
 }
