--- a/front/src/styles/WeatherLanding.css
+++ b/front/src/styles/WeatherLanding.css
@@ -2,7 +2,6 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  overflow: hidden;
 }
 
 .weather-landing {
@@ -12,9 +11,10 @@
   height: 100vh;
   padding: 100px 50px;
   background-image: url("https://images.unsplash.com/photo-1542349314-b0ceb4d90f2d?q=80&w=2938&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+  overflow: hidden;
 }
 
-h1 {
+.weather-landing h1 {
   text-align: left;
   font-size: 72px;
   font-weight: 200;
@@ -39,7 +39,7 @@ h1 {
   padding: 0;
 }
 
-h2 {
+.weather-landing h2 {
   font-size: 32px;
 }
 
