--- a/front/src/styles/SearchCity.css
+++ b/front/src/styles/SearchCity.css
@@ -4,80 +4,159 @@
   box-sizing: border-box;
 }
 
-.search-my-city {
-  display: 0 auto;
-}
-
-.search-page-title {
-  font-size: 36px;
-  font-weight: 300;
-  text-align: center;
-  margin: 80px auto;
-}
-
-.search-container {
-  width: 400px;
-  margin: 0 auto;
-  display: flex;
+#search-city-container {
+  width: 100%;
+  height: 100vh;
   position: relative;
   align-items: center;
+  margin: 0 auto;
+  overflow: hidden;
 }
 
-.search-container input {
+#video-background {
+  position: absolute;
   width: 100%;
-  padding: 20px 30px;
-  border-radius: 50px;
-  border: 1px solid lightgrey;
-  font-size: 16px;
+  height: 100%;
+  object-fit: cover;
+  z-index: 1;
 }
 
-.search-container button {
+.search-city-content {
+  position: relative;
+  z-index: 10;
+  margin-top: 5%;
+}
+
+h2.search-city-title {
+  color: white;
+  font-size: 32px;
+  font-weight: 300;
+  text-align: center;
+}
+
+.search-city-inputs {
+  display: flex;
+  justify-content: center;
+}
+
+.dropdown-container {
+  position: relative;
+}
+
+.dropdown-container select {
+  padding: 10px 20px;
+  padding-left: 20px;
+  appearance: none;
+  border: 1px solid #ffffff60;
+  border-radius: 50px;
+  background-color: #ffffff80;
+  height: 60px;
+  min-width: 140px;
+  transition: border-color 0.3s ease, box-shadow 0.3s ease;
+  font-size: 16px;
+  color: #575757;
+  z-index: 2;
+}
+
+.dropdown-container select:focus {
+  border-color: #fff;
+  outline: none;
+  background-color: #f0f8ff;
+  color: black;
+}
+
+.dropdown-container::before {
+  content: "▼";
+  position: absolute;
+  right: 20px;
+  top: 50%;
+  transform: translateY(-50%);
+  pointer-events: none;
+  font-size: 12px;
+  color: #004aad;
+  z-index: 3;
+}
+
+.search-input-container {
+  position: relative;
+  display: flex;
+  align-items: center;
+  margin-left: 10px;
+}
+
+.search-input-container input {
+  flex: 1;
+  padding: 10px 30px;
+  background-color: #ffffff80;
+  border: 1px solid #ffffff60;
+  border-radius: 50px;
+  height: 60px;
+  width: 360px;
+  font-size: 16px;
+  box-sizing: border-box;
+  z-index: 10;
+  color: black;
+}
+
+.search-input-container input:focus {
+  border-color: #fff;
+  outline: none;
+  background-color: #f0f8ff;
+}
+
+button.search-city-button {
   padding: 10px 20px;
   border: none;
   border-radius: 50px;
   width: 100px;
   height: 44px;
-  position: relative;
-  margin-left: -110px;
   background-color: #004aad;
   color: white;
   font-size: 15px;
+  margin-left: -110px;
+  margin-top: 8px;
+  cursor: pointer;
+  z-index: 10;
+  transition: background-color 1s linear;
 }
 
-.search-container button:hover {
-  background-color: #6ac9ff;
+button.search-city-button:hover {
+  background: linear-gradient(135deg, #004aad, #003e8f);
 }
 
-.search-container {
-  height: 500px;
-}
-
-.results-list,
-.suggestions-list {
-  border: 1px solid #ccc;
-  border-radius: 50px;
-  min-height: 50px;
-  max-height: 300px;
-  overflow-y: auto;
-  margin-top: 125px;
-  padding-top: 100px;
-  padding: 10px 20px;
-  list-style-type: none;
+.sub-location-list {
   position: absolute;
-  width: 100%;
-  background: white;
-  z-index: 1000;
+  top: 100%;
+  left: 0;
+  right: 0;
+  background-color: #ffffff;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  max-height: 200px;
+  overflow-y: auto;
+  z-index: 10;
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
 }
 
-.results-list li,
-.suggestions-list li {
+.sub-location-list li {
   padding: 10px;
   cursor: pointer;
 }
 
-.results-list li:hover,
-.suggestions-list li:hover,
-.results-list .highlighted,
-.suggestions-list .highlighted {
+.sub-location-list li:hover,
+.sub-location-list .highlighted {
   background-color: #fafafa;
+}
+
+.mascot {
+  max-width: 980px;
+}
+
+.mascot img {
+  position: absolute;
+  left: 10%;
+  bottom: 5%;
+  z-index: 2000;
 }
