--- a/front/src/styles/ChallengeDetail.css
+++ b/front/src/styles/ChallengeDetail.css
@@ -6,6 +6,32 @@
   gap: 24px;
 }
 
+.detail .but {
+  display: flex;
+  justify-content: space-between;
+  width: 128px;
+}
+
+.detail .edi {
+  width: 60px;
+  height: 24px;
+  border-radius: 4px;
+  background-color: #004AAD;
+  color: white;
+}
+
+.detail .can {
+  width: 60px;
+  height: 24px;
+  border-radius: 4px;
+  background-color: gray;
+  color: white;
+}
+
+.detail .can:hover {
+  background-color: #ad1a00;
+}
+
 .detail span div {
   width: 92px;
   height: 28px;
@@ -18,7 +44,14 @@
   align-items: center;
 }
 
-.desc {
+.descBox {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.descBox .desc {
   width: 400px;
   height: 60px;
   text-align: center;
@@ -27,7 +60,7 @@
 .to-dos {
   width: 400px;
   border-radius: 8px;
-  background-color: #FAFAFA;
+  background-color: rgba(205, 237, 255, 0.7);
   display: flex;
   flex-direction: column;
   justify-content: center;
