--- a/front/src/styles/ChallengeCreate.css
+++ b/front/src/styles/ChallengeCreate.css
@@ -1,9 +1,38 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+@font-face {
+  font-family: "HancomMalangMalang-Regular";
+  src: url("https://fastly.jsdelivr.net/gh/projectnoonnu/2406-1@1.0/HancomMalangMalang-Regular.woff2")
+    format("woff2");
+  font-weight: 400;
+  font-style: normal;
+}
+
 .ChallengeCreate {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   gap: 24px;
+  position: relative;
+  background-image: url("https://images.unsplash.com/photo-1600426354703-64a1a314d99e?q=80&w=3388&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+  object-fit: cover;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: calc(100vh - 70px);
+  width: 100%;
+}
+
+.ChallengeCreate .create-challenge-form-title {
+  font-family: "HancomMalangMalang-Regular";
+  font-size: 36px;
+  color: #333;
+  margin-bottom: 10px;
 }
 
 .form {
@@ -11,108 +40,151 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 24px;
+  gap: 16px;
+  padding: 50px;
+  background: rgba(255, 255, 255, 0.1);
+  backdrop-filter: brightness(1.1) blur(20px);
+  border-radius: 20px;
 }
 
 .form p {
-  color: red;
+  color: white;
+  font-size: 14px;
+  font-weight: 600;
 }
 
 .form ul {
   padding-left: 12px;
+  margin-top: 16px;
 }
 
 .form ul li {
   list-style-type: none;
-  margin: 12px 0 0 0;
+  line-height: 1.8;
+  color: white;
+}
+
+.form ul li a {
+  color: white;
 }
 
 .title {
   width: 400px;
-  height: 60px;
-  border: 1px solid #D9D9D9;
+  height: 56px;
+  border: none;
   border-radius: 50px;
   outline: none;
   text-align: center;
-  font-size: 24px;
+  text-align: center;
+  background-color: #ffffff70;
+  font-size: 16px;
+  color: #333;
+}
+
+.title::placeholder {
+  font-size: 16px;
+  color: #333;
 }
 
 .description {
   resize: none;
   width: 400px;
   height: 164px;
-  border: 1px solid #D9D9D9;
+  border: none;
   border-radius: 20px;
   outline: none;
   padding: 20px;
   font-size: 16px;
+  background: #ffffff70;
+  color: #333;
+}
+
+.description::placeholder {
+  text-align: center;
+  font-size: 16px;
+  color: #333;
 }
 
 .inputs {
   width: 400px;
   display: flex;
-  justify-content: space-between; 
+  justify-content: space-between;
 }
 
 .date {
-  width: 188px;
-  height: 60px;
+  width: 194px;
+  height: 56px;
   border-radius: 50px;
   outline: none;
   text-align: center;
-  border: 1px solid #D9D9D9;
+  border: none;
+  background: #ffffff70;
+  color: #333;
+  padding: 0 8px;
+  text-align: center;
+  margin-top: -6px;
 }
 
 .add {
   width: 400px;
-  height: 60px;
+  height: 56px;
   border-radius: 50px;
   outline: none;
   text-align: center;
-  background-color: white;
-  border: 1px solid #D9D9D9;
+  border: none;
+  background: #ffffff70;
+  color: #333;
+  font-size: 16px;
 }
 
 .buttons {
-  width: 400px;
+  width: 100%;
   display: flex;
   justify-content: space-between;
+  margin-top: -3px;
 }
 
 .cancel {
-  width: 188px;
-  height: 60px;
+  width: 194px;
+  height: 56px;
   border-radius: 50px;
   outline: none;
   text-align: center;
-
-  background-color: #69747B;
+  background-color: #69747b;
   color: white;
   border: 0;
-  font-size: 20px;
+  font-size: 16px;
 }
 
 .create {
-  width: 188px;
-  height: 60px;
+  width: 194px;
+  height: px;
   border-radius: 50px;
   outline: none;
   text-align: center;
-
-  background-color: #004AAD;
+  background-color: #004aad;
   color: white;
   border: 0;
-  font-size: 20px;
+  font-size: 16px;
 }
 
-input[type='date']::before {
+input[type="date"]::before {
   content: attr(data-placeholder);
   width: 100%;
 }
 
-input[type='date']:focus::before,
-input[type='date']:valid::before {
+input[type="date"]:focus::before,
+input[type="date"]:valid::before {
   display: none;
+}
+
+input[type="date"]::-ms-calendar-picker-indicator {
+  opacity: 1;
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+  pointer-events: none;
 }
 
 .modal {
@@ -156,7 +228,7 @@ input[type='date']:valid::before {
   width: 100%;
   padding: 10px;
   margin-bottom: 10px;
-  border: 1px solid #D9D9D9;
+  border: 1px solid #d9d9d9;
   border-radius: 20px;
   text-align: center;
 }
