--- a/front/src/styles/MyPage.css
+++ b/front/src/styles/MyPage.css
@@ -52,3 +52,19 @@
   position: relative; /* Ensure content is positioned correctly within container */
   z-index: 1; /* Ensure content is above the video */
 }
+
+.my-page-content-right {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.delete-account-button {
+  padding: 5px;
+  font-size: 12px;
+  margin-top: 10px;
+  background-color: transparent;
+  border: none;
+  text-decoration: underline;
+  color: rgb(255, 255, 255);
+}
