--- a/front/src/styles/UriLocations.css
+++ b/front/src/styles/UriLocations.css
@@ -51,7 +51,7 @@
   background-color: white;
   padding: 20px;
   border-radius: 80px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  /* box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); */
   font-family: "HancomMalangMalang-Regular"; /* 폰트를 HancomMalangMalang-Regular로 설정 */
 }
 
